# PrivateKube

./: .gitignore  README.md  index.html  index.md  requirements.txt  setup.py
evaluation/: README.md
evaluation/examples/: README.md  go.mod
evaluation/macrobenchmark/: README.md  dataset.py  models.py  run.py  scheduler.py  utils.py
evaluation/microbenchmark/: README.md  microbench_multi_block.py  microbenchmark_figures_multiple_block.ipynb  microbenchmark_figures_single_block.ipynb
examples/: README.md
examples/pipeline/: README.md  arguments.yaml  build_components.py  client_secrets.example.yaml  demo_blocks.py  run_pipeline.py  test_claim.yaml  user-role_secrets.example.yaml
examples/simulator/: minimal_example.py
privatekube/: Dockerfile  README.md  __init__.py  requirements.txt  setup.py
privatekube/experiments/: batch_samplers.py  datasets.py  run.py  utils.py
privatekube/kfp/: README.md  __init__.py  components.py
privatekube/platform/: block.py  pipeline_lifecycle.py  privacy_budget.py  privacy_claim.py  privacy_resource_client.py
privatekube/privacy/: __init__.py  rdp.py  (+3 more)
simulator/: README.md  requirements.txt  setup.cfg
simulator/dpsched/: DP_simulator.py  __init__.py
simulator/dpsched/analysis/: __init__.py  data_collection.py  plot.py
simulator/dpsched/utils/: __init__.py  configs.py  exceptions.py  misc.py  rdp.py  store.py
simulator/examples/: microbench_single_block.py  microbenchmark_figures_single_block.ipynb
simulator/tests/: test_fcfs.py  workloads.yaml
system/: Dockerfile  README.md  deploy.sh  scheduler.Dockerfile
(+198 files in other folders)
