[metadata]
name = dpsched
version = 1.0
author = Tao Luo
author_email = tao.luo@columbia.edu
description = Discrete Event Simulation for Differential Privacy Budget Scheduling
long_description = file: README.md, LICENSE.txt
download_url = https://github.com/taoluo/privacy-budget-scheduling
license = Apache Software License (https://www.apache.org/licenses/LICENSE-2.0)
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache License 2.0
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering

[options]
packages = dpsched
zip_safe = False
install_requires =
    desmod
python_requires = >= 3.6

[options.extras_require]
plot = seaborn; notebook

[bdist_wheel]
universal = 1

[tool:pytest]
